# docs/swagger.json
@@ -30,7 +30,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/pamagi_domain_dto.CategoryResponse"
+                                "$ref": "#/definitions/dto.CategoryResponse"
                             }
                         }
                     }
@@ -60,7 +60,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/pamagi_domain_dto.CreateCategoryRequest"
+                            "$ref": "#/definitions/dto.CreateCategoryRequest"
                         }
                     }
                 ],
@@ -68,7 +68,162 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pamagi_domain_dto.CategoryResponse"
+                            "$ref": "#/definitions/dto.CategoryResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/flashcards/generate": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Mengambil daftar kata berdasarkan filter (maksimal 20 untuk Free, diacak jika lebih)",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Flashcard"
+                ],
+                "summary": "Dapatkan Soal Flashcard",
+                "parameters": [
+                    {
+                        "description": "Filter Flashcard",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.GenerateFlashcardRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.WordResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/flashcards/history": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Menampilkan riwayat kuis user (Detail jawaban hanya muncul jika Premium)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Flashcard"
+                ],
+                "summary": "Ambil Histori Kuis",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/dto.QuizSessionResponse"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/flashcards/history/{id}": {
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Menghapus satu riwayat kuis berdasarkan ID sesi",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Flashcard"
+                ],
+                "summary": "Hapus Histori Kuis",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID Session",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.SuccessResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/flashcards/submit": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Menyimpan skor akhir dan detail jawaban user setelah kuis selesai",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Flashcard"
+                ],
+                "summary": "Kirim Hasil Kuis",
+                "parameters": [
+                    {
+                        "description": "Data Skor Kuis",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.SubmitQuizRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.SuccessResponse"
                         }
                     },
                     "400": {
@@ -100,7 +255,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/pamagi_domain_dto.LoginRequest"
+                            "$ref": "#/definitions/dto.LoginRequest"
                         }
                     }
                 ],
@@ -108,7 +263,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pamagi_domain_dto.AuthResponse"
+                            "$ref": "#/definitions/dto.AuthResponse"
                         }
                     },
                     "400": {
@@ -183,7 +338,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/pamagi_domain_dto.RegisterRequest"
+                            "$ref": "#/definitions/dto.RegisterRequest"
                         }
                     }
                 ],
@@ -256,7 +411,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/pamagi_domain_dto.WordResponse"
+                                "$ref": "#/definitions/dto.WordResponse"
                             }
                         }
                     }
@@ -286,7 +441,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/pamagi_domain_dto.CreateWordRequest"
+                            "$ref": "#/definitions/dto.CreateWordRequest"
                         }
                     }
                 ],
@@ -358,7 +513,7 @@
                 }
             }
         },
-        "pamagi_domain_dto.AuthResponse": {
+        "dto.AuthResponse": {
             "type": "object",
             "properties": {
                 "access_token": {
@@ -368,11 +523,11 @@
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/pamagi_domain_dto.UserResponse"
+                    "$ref": "#/definitions/dto.UserResponse"
                 }
             }
         },
-        "pamagi_domain_dto.CategoryRes": {
+        "dto.CategoryRes": {
             "type": "object",
             "properties": {
                 "id": {
@@ -383,7 +538,7 @@
                 }
             }
         },
-        "pamagi_domain_dto.CategoryResponse": {
+        "dto.CategoryResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -394,7 +549,7 @@
                 }
             }
         },
-        "pamagi_domain_dto.CreateCategoryRequest": {
+        "dto.CreateCategoryRequest": {
             "type": "object",
             "required": [
                 "name"
@@ -405,7 +560,7 @@
                 }
             }
         },
-        "pamagi_domain_dto.CreateWordRequest": {
+        "dto.CreateWordRequest": {
             "type": "object",
             "required": [
                 "part_of_speech",
@@ -424,7 +579,7 @@
                     "description": "Array contoh kalimat (Opsional)",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/pamagi_domain_dto.ExampleRequest"
+                        "$ref": "#/definitions/dto.ExampleRequest"
                     }
                 },
                 "part_of_speech": {
@@ -438,7 +593,7 @@
                 }
             }
         },
-        "pamagi_domain_dto.ExampleRequest": {
+        "dto.ExampleRequest": {
             "type": "object",
             "required": [
                 "russian_sentence",
@@ -453,7 +608,44 @@
                 }
             }
         },
-        "pamagi_domain_dto.LoginRequest": {
+        "dto.GenerateFlashcardRequest": {
+            "type": "object",
+            "required": [
+                "filter_type"
+            ],
+            "properties": {
+                "category_id": {
+                    "description": "Parameter opsional (tergantung FilterType)",
+                    "type": "string"
+                },
+                "end_date": {
+                    "type": "string"
+                },
+                "filter_type": {
+                    "description": "Opsi: \"category\", \"part_of_speech\", \"favorite\", \"date_range\", \"manual\", \"all\"",
+                    "type": "string"
+                },
+                "part_of_speech": {
+                    "type": "string"
+                },
+                "sort_by": {
+                    "description": "Opsi: \"name_asc\", \"name_desc\", \"created_asc\", \"created_desc\", \"updated_desc\"",
+                    "type": "string"
+                },
+                "start_date": {
+                    "description": "Format: YYYY-MM-DD",
+                    "type": "string"
+                },
+                "word_ids": {
+                    "description": "Jika pilih manual satu per satu",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "dto.LoginRequest": {
             "type": "object",
             "required": [
                 "identifier",
@@ -469,7 +661,54 @@
                 }
             }
         },
-        "pamagi_domain_dto.RegisterRequest": {
+        "dto.QuizDetailResponse": {
+            "type": "object",
+            "properties": {
+                "is_correct": {
+                    "type": "boolean"
+                },
+                "russian_word": {
+                    "type": "string"
+                },
+                "translation": {
+                    "type": "string"
+                },
+                "word_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.QuizSessionResponse": {
+            "type": "object",
+            "properties": {
+                "correct_answers": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "details": {
+                    "description": "omitempty agar null untuk user Free",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.QuizDetailResponse"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "incorrect_answers": {
+                    "type": "integer"
+                },
+                "score": {
+                    "type": "number"
+                },
+                "total_words": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.RegisterRequest": {
             "type": "object",
             "required": [
                 "email",
@@ -499,7 +738,56 @@
                 }
             }
         },
-        "pamagi_domain_dto.UserResponse": {
+        "dto.SubmitQuizDetail": {
+            "type": "object",
+            "required": [
+                "word_id"
+            ],
+            "properties": {
+                "is_correct": {
+                    "type": "boolean"
+                },
+                "word_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.SubmitQuizRequest": {
+            "type": "object",
+            "required": [
+                "status",
+                "total_words"
+            ],
+            "properties": {
+                "correct_answers": {
+                    "type": "integer"
+                },
+                "details": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.SubmitQuizDetail"
+                    }
+                },
+                "incorrect_answers": {
+                    "type": "integer"
+                },
+                "score": {
+                    "type": "number"
+                },
+                "status": {
+                    "description": "Tambahkan ini",
+                    "type": "string",
+                    "enum": [
+                        "IN_PROGRESS",
+                        "COMPLETED"
+                    ]
+                },
+                "total_words": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.UserResponse": {
             "type": "object",
             "properties": {
                 "email": {
@@ -516,7 +804,7 @@
                 }
             }
         },
-        "pamagi_domain_dto.WordExampleRes": {
+        "dto.WordExampleRes": {
             "type": "object",
             "properties": {
                 "id": {
@@ -530,13 +818,13 @@
                 }
             }
         },
-        "pamagi_domain_dto.WordResponse": {
+        "dto.WordResponse": {
             "type": "object",
             "properties": {
                 "categories": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/pamagi_domain_dto.CategoryRes"
+                        "$ref": "#/definitions/dto.CategoryRes"
                     }
                 },
                 "created_at": {
@@ -545,7 +833,7 @@
                 "examples": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/pamagi_domain_dto.WordExampleRes"
+                        "$ref": "#/definitions/dto.WordExampleRes"
                     }
                 },
                 "id": {
